--- a/content/resources/4-322f03-th.md
+++ b/content/resources/4-322f03-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: The final installation by Phillip Kelleher.  (Image courtesy of MIT OCW.)
-file: /media/courses/4-322-introduction-to-sculpture-fall-2003/e95f9315d9ef9eedbc04938e5496fab0_4-322f03-th.jpg
+file: /courses/4-322-introduction-to-sculpture-fall-2003/e95f9315d9ef9eedbc04938e5496fab0_4-322f03-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The final installation by Phillip Kelleher. (Image courtesy of MIT OpenCourseWare.)
@@ -13,3 +13,5 @@ resourcetype: Image
 title: Installation by Phillip Kelleher (thumbnail)
 uid: e95f9315-d9ef-9eed-bc04-938e5496fab0
 ---
+The final installation by Phillip Kelleher.  (Image courtesy of MIT OCW.)
+
