--- a/content/resources/4-322f03.md
+++ b/content/resources/4-322f03.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: The final installation by Phillip Kelleher.  (Image courtesy of MIT OCW.)
-file: /media/courses/4-322-introduction-to-sculpture-fall-2003/325fb3d794be116cf9cd6236436192c5_4-322f03.jpg
+file: /courses/4-322-introduction-to-sculpture-fall-2003/325fb3d794be116cf9cd6236436192c5_4-322f03.jpg
 file_type: image/jpeg
 image_metadata:
   caption: The final installation by Phillip Kelleher. (Image courtesy of MIT OpenCourseWare.)
@@ -13,3 +13,5 @@ resourcetype: Image
 title: Installation by Phillip Kelleher
 uid: 325fb3d7-94be-116c-f9cd-6236436192c5
 ---
+The final installation by Phillip Kelleher.  (Image courtesy of MIT OCW.)
+
