--- a/content/resources/4-322f03-th.md
+++ b/content/resources/4-322f03-th.md
@@ -8,10 +8,10 @@ image_metadata:
   credit: ''
   image-alt: Phil Kelleher's White Room.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Installation by Phillip Kelleher (thumbnail)
 uid: e95f9315-d9ef-9eed-bc04-938e5496fab0
 ---
 The final installation by Phillip Kelleher.  (Image courtesy of MIT OCW.)
-
