--- a/content/resources/4-322f03.md
+++ b/content/resources/4-322f03.md
@@ -8,10 +8,10 @@ image_metadata:
   credit: ''
   image-alt: Phil Kelleher's White Room.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: Installation by Phillip Kelleher
 uid: 325fb3d7-94be-116c-f9cd-6236436192c5
 ---
 The final installation by Phillip Kelleher.  (Image courtesy of MIT OCW.)
-
