--- a/content/resources/4-322f03.md
+++ b/content/resources/4-322f03.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: The final installation by Phillip Kelleher.  (Image courtesy of MIT OCW.)
 file: /courses/4-322-introduction-to-sculpture-fall-2003/325fb3d794be116cf9cd6236436192c5_4-322f03.jpg
+file_size: 34759
 file_type: image/jpeg
 image_metadata:
   caption: The final installation by Phillip Kelleher. (Image courtesy of MIT OpenCourseWare.)
